feat(api.githubstatus): Add schema
