# internal/oas/oas_validators_gen.go
@@ -53,3 +53,63 @@ func (s *Status) Validate() error {
 	}
 	return nil
 }
+
+func (s StatusNotification) Validate() error {
+	switch s.Type {
+	case StatusNotificationIncidentUpdateStatusNotification:
+		if err := s.StatusNotificationIncidentUpdate.Validate(); err != nil {
+			return err
+		}
+		return nil
+	case StatusNotificationComponentUpdateStatusNotification:
+		return nil // no validation needed
+	default:
+		return errors.Errorf("invalid type %q", s.Type)
+	}
+}
+
+func (s *StatusNotificationIncident) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if s.IncidentUpdates == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "incident_updates",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
+func (s *StatusNotificationIncidentUpdate) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if err := s.Incident.Validate(); err != nil {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "incident",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
